<resources>
    <string name="app_name">AboutQA</string>
    <string name="qa">QA</string>
    <string name="start">Начать</string>
    <string name="back">Назад</string>
    <string name="QA"> - это совокупность мероприятий, охватывающих все технологические этапы разработки, выпуска и эксплуатации программного обеспечения (ПО) информационных систем, предпринимаемых на разных стадиях жизненного цикла ПО, для обеспечения требуемого уровня качества выпускаемого продукта. </string>
    <string name="QA_2">Простым языком, QA - это процесс улучшения качества ПО, через улучшение процесса разработки ПО.</string>
    <string name="QC">- это совокупность действий, проводимых над продуктом в процессе разработки, для получения информации о его актуальном состоянии в разрезах: "готовность продукта к выпуску", "соответствие зафиксированным требованиям", "соответствие заявленному уровню качества продукта.</string>
    <string name="ST">- это одна из техник контроля качества, включающая в себя активности по планированию работ (Test Management), проектированию тестов (Test Design), выполнению тестирования (Test Execution) и анализу полученных результатов (Test Analysis). </string>
    <string name="SQ">- это совокупность характеристик программного обеспечения, относящихся к его способности удовлетворять установленные и предполагаемые потребности.</string>
    <string name="bug">Bug — это отклонение фактического результата (actual result) от ожидаемого результата (expected result).</string>
    <string name="verification_text">Верификация (Verification) - это процесс оценки системы или её компонентов с целью определения удовлетворяют ли результаты текущего этапа разработки условиям, сформированным в начале этого этапа [IEEE]. Т.е. выполняются ли наши цели, сроки, задачи по разработке проекта, определенные в начале текущей фазы. </string>
    <string name="validation_text">Валидация (validation) — это определение соответствия разрабатываемого ПО ожиданиям и потребностям пользователя, требованиям к системе [BS7925-1]</string>
    <string name="verivication_validation_other">Также можно встретить иную интерпритацию: Процесс оценки соответствия продукта явным требованиям (спецификациям) и есть верификация (verification), в то же время оценка соответствия продукта ожиданиям и требованиям пользователей — есть валидация (validation). </string>
    <string name="tg_text">Повысить вероятность того, что приложение, предназначенное для тестирования, будет работать правильно при любых обстоятельствах.\nПовысить вероятность того, что приложение, предназначенное для тестирования, будет соответствовать всем описанным требованиям.\nПредоставление актуальной информации о состоянии продукта на данный момент.</string>
    <string name="SQL">Если говорить, просто SQL - это язык Баз данных.</string>
    <string name="DataBase">База данных (БД) - упорядоченный набор логически взаимосвязанных данных, используемых совместно, и которые хранятся в одном месте. Если коротко, то простейшая БД это обычная таблица со строками и столбцами в которой хранится разного рода информация </string>
    <string name="CreateDataBase">Для создания базы данных используется команда CREATE DATABASE. Она имеет следующий синтаксис: CREATE DATABASE exampledb;\nУстановка базы данных : USE exampledb;\nУдаление базы данных: DROP DATABASE productsdb;</string>
    <string name="test_documentation">В соответствие с процессами или методологиями разработки ПО, во время проведения тестирования создается и используется определенное количество тестовых артефактов (документы, модели и т.д.). Наиболее распространенными тестовыми артефактами являются:</string>
    <string name="check_list_text">Чек-лист  — набор идей [тест-кейсов]. Последнее слово не зря взято в скобки, т. к. в общем случае чек-лист — это просто набор идей: идей по тестированию, идей по разработке, идей по планированию и управлению — любых идей.</string>
    <string name="test_plan">План тестирования (Test Plan) - это документ описывающий весь объем работ по тестированию, начиная с описания объекта, стратегии, расписания, критериев начала и окончания тестирования, до необходимого в процессе работы оборудования, специальных знаний, а также оценки рисков с вариантами их разрешения.</string>
    <string name="test_case">Test Case  - это последовательность действий, по которой можно проверить соответствует ли тестируемая функция установленным требованиям.</string>
    <string name="bug_report">Дефекты / Баг Репорты (Bug Reports / Defects) - это документы, описывающие ситуацию или последовательность действий приведшую к некорректной работе объекта тестирования, с указанием причин и ожидаемого результата.</string>
    <string name="requirements_text">Требование  — описание того, какие функции и с соблюдением каких условий должно выполнять приложение в процессе решения полезной для пользователя задачи.</string>
    <string name="test_design">Тест дизайн — это этап процесса тестирования ПО, на котором проектируются и создаются тестовые сценарии (тест кейсы), в соответствии с определёнными ранее критериями качества и целями тестирования.</string>
    <string name="ep"> Как пример, у вас есть диапазон допустимых значений от 1 до 10, вы должны выбрать одно верное значение внутри интервала, скажем, 5, и одно неверное значение вне интервала — 0.</string>
    <string name="BVA">Если взять пример выше, в качестве значений для позитивного тестирования выберем минимальную и максимальную границы (1 и 10), и значения больше и меньше границ (0 и 11). Анализ Граничный значений может быть применен к полям, записям, файлам, или к любого рода сущностям имеющим ограничения. </string>
    <string name="ce"> Это, как правило, ввод комбинаций условий (причин), для получения ответа от системы (Следствие). Например, вы проверяете возможность добавлять клиента, используя определенную экранную форму. Для этого вам необходимо будет ввести несколько полей, таких как «Имя», «Адрес», «Номер Телефона» а затем, нажать кнопку «Добавить» — это «Причина». После нажатия кнопки «Добавить», система добавляет клиента в базу данных и показывает его номер на экране — это «Следствие». </string>
    <string name="eg"> Это когда тестировщик использует свои знания системы и способность к интерпретации спецификации на предмет того, чтобы «предугадать» при каких входных условиях система может выдать ошибку. Например, спецификация говорит: «пользователь должен ввести код». Тестировщик будет думать: «Что, если я не введу код?», «Что, если я введу неправильный код? », и так далее. Это и есть предугадывание ошибки. </string>
    <string name="et">	Исчерпывающее тестирование (Exhaustive Testing — ET) — это крайний случай. В пределах этой техники вы должны проверить все возможные комбинации входных значений, и в принципе, это должно найти все проблемы. На практике применение этого метода не представляется возможным, из-за огромного количества входных значений.</string>
    <string name="sdm">структура, систематизирующая различные виды проектной деятельности, их взаимодействие и последовательность в процессе разработки ПО. Выбор той или иной модели зависит от масштаба  сложности проекта, предметной области, доступных ресурсов и множества других факторов. \n \nВыбор модели разработки ПО серьёзно влияет на процесс тестирования, определяя выбор
стратегии, расписание, необходимые ресурсы и т.д.</string>
    <string name="sdm_understanding">Знать и понимать модели разработки ПО необходимо затем, чтобы уже с первых дней работы понимать, что происходит вокруг, что, зачем и почему вы делаете. Многие начинающие тестировщики отмечают, что ощущение бессмысленности происходящего посещает их, даже если текущие задания интересны. Чем полнее вы будете представлять картину происходящего на проекте, тем яснее вам будет виден ваш собственный вклад в общее дело и смысл того, чем вы занимаетесь.</string>
    <string name="watrefall"> - предполагает однократное выполнение каждой из фаз проекта, которые, в свою очередь, строго следуют друг за другом \n \n
        - Общее планирование
            \n- Работа с требованиями
            \n - Техническая архитектура
            \n - Детализированный дизайн
            \n - Разработка и отладка
            \n - Интеграция и модульные тесты
            \n - Приёмочное тестирование
            \n - Создание отчётности
    </string>
    <string name="test_types">Все виды тестирования программного обеспечения, в зависимости от преследуемых целей, можно условно разделить на следующие группы:
        \n - <b>Функциональные</b>
        \n - <b>Нефункциональны</b>
        \n - <b>Связанные с изменениями</b>
    </string>
    <string name="functional_text">Функциональное тестирование – один из видов тестирования, направленного на проверку соответствий функциональных требований ПО к его реальным характеристикам. Основной задачей функционального тестирования является подтверждение того, что разрабатываемый программный продукт обладает всем функционалом, требуемым заказчиком.</string>
    <string name="functional_text_2">Функциональные тесты базируются на функциях и особенностях, а также взаимодействии с другими системами, и могут быть представлены на всех уровнях тестирования:
        \n <b>- компонентном или модульном (Component/Unit testing)</b>
        \n <b>- интеграционном (Integration testing)</b>
        \n <b>- системном (System testing)</b>
        \n <b>- приемочном (Acceptance testing).</b>
        \n \n Функциональные виды тестирования рассматривают внешнее поведение системы. Далее перечислены одни из самых распространенных видов функциональных тестов:

    \n - Функциональное тестирование (Functional testing)
        \n - Тестирование безопасности (Security and Access Control Testing)
    \n - Тестирование взаимодействия (Interoperability Testing)
    </string>
    <string name="not_func_text">Нефункциональные виды тестирования

Нефункциональное тестирование описывает тесты, необходимые для определения характеристик программного обеспечения, которые могут быть измерены различными величинами. В целом, это тестирование того, "Как" система работает. Далее перечислены основные виды нефункциональных тестов:
    \n <b>Все виды тестирования производительности: </b>
        \n \t -  <b>нагрузочное тестирование (Performance and Load Testing)</b>
        \n \t - <b>стрессовое тестирование (Stress Testing)</b>
        \n \t - <b>тестирование стабильности или надежности (Stability / Reliability Testing)</b>
        \n \t - <b>объемное тестирование (Volume Testing)</b>
    \n \n- <b>Тестирование установки (Installation testing)</b>
    \n - <b>Тестирование удобства пользования (Usability Testing)</b>
    \n - <b>Тестирование на отказ и восстановление (Failover and Recovery Testing)</b>
    \n - <b>Конфигурационное тестирование (Configuration Testing)</b>
    </string>
    <string name="change_test">Связанные с изменениями виды тестирования После проведения необходимых изменений, таких как исправление бага/дефекта, программное обеспечение должно быть пере тестировано для подтверждения того факта, что проблема была действительно решена. Ниже перечислены виды тестирования, которые необходимо проводить после установки программного обеспечения, для подтверждения работоспособности приложения или правильности осуществленного исправления дефекта:
    \n <b>Дымовое тестирование (Smoke Testing)</b>
    \n <b>Регрессионное тестирование (Regression Testing)</b>
    \n <b>Тестирование сборки (Build Verification Test)</b>
    \n <b>Санитарное тестирование или проверка согласованности/исправности (Sanity Testing)</b>
    </string>
</resources>