<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/level_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:scaleType="centerCrop"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/backgrount_for_test_level">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_back_from_level_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="35dp"
                android:background="@drawable/btn_back"
                android:fontFamily="@font/swfontcirylic"
                android:text="@string/back"
                android:textColor="@color/lightbluemenu"
                android:textSize="17sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/style_level_borders"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/test_doc_title"
                    android:layout_width="match_parent"
                    android:layout_height="29dp"
                    android:fontFamily="@font/swfontcirylic"
                    android:text="Типы Тестирования"
                    android:textAlignment="center"
                    android:textColor="@color/dark_blue_levels_borders"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/test_types"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_types"
                    android:textAlignment="center"
                    android:textColor="@color/dark_blue_levels_borders"
                    android:typeface="sans" />


            </LinearLayout>
            <!--Func-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/style_level_borders"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/functional"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/swfont"
                    android:text="Функциональное тестирование"
                    android:textAlignment="center"
                    android:textColor="@color/dark_blue_levels_borders"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/functional_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/functional_text"
                    android:textAlignment="center"
                    android:textColor="@color/dark_blue_levels_borders"
                    android:textSize="14dp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/style_level_borders"
                android:orientation="vertical"
                android:padding="10dp">


                <TextView
                    android:id="@+id/functional_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/functional_text_2"
                    android:textAlignment="center"
                    android:textColor="@color/dark_blue_levels_borders"
                    android:textSize="14dp" />
            </LinearLayout>





            <!--NotFunc-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/style_level_borders"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/not_func"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/swfont"
                    android:text="Нефункциональное тестирование"
                    android:textAlignment="center"
                    android:textColor="@color/dark_blue_levels_borders"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/test_plan_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/not_func_text"
                    android:textAlignment="center"
                    android:textColor="@color/dark_blue_levels_borders"
                    android:textSize="14dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/style_level_borders"
                android:orientation="vertical"
                android:padding="10dp"
                >

                <TextView
                    android:id="@+id/change"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/swfontcirylic"
                    android:text="Связанные с изменениями виды тестирования"
                    android:textAlignment="center"
                    android:textColor="@color/dark_blue_levels_borders"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/st_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/change_test"
                    android:textAlignment="center"
                    android:textColor="@color/dark_blue_levels_borders"
                    android:textSize="14dp"
                    />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>


