<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/level_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/background_level_1"
        android:scaleType="centerCrop"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/button_back_from_level_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="35dp"
                android:background="@drawable/btn_stroke_press_border_blue"
                android:fontFamily="@font/swfont"
                android:paddingBottom="10px"
                android:text="back"
                android:textColor="@color/yellow"
                android:textSize="17sp" />

            <!-- QA -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/btn_continue_level_1"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/qa_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/swfontcirylic"
                    android:text="Жизненный цикл Тестирования"
                    android:textAlignment="center"
                    android:textColor="@color/dark_blue_level_1"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/qa_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/QA"
                    android:textAlignment="center"
                    android:textColor="@color/dark_blue_level_1"
                    android:typeface="sans" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/QA_2"
                    android:textAlignment="center"
                    android:textColor="@color/dark_blue_level_1" />

            </LinearLayout>
            <!--  QC  -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/btn_continue_level_1"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/qc_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/swfont"
                    android:text="Контроль качества (quality Control - qC)"
                    android:textAlignment="center"
                    android:textColor="@color/dark_blue_level_1"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/qc_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:text="@string/QC"
                    android:textAlignment="center"
                    android:textColor="@color/dark_blue_level_1"
                    android:textSize="14dp" />
            </LinearLayout>
            <!-- Sofrware testing -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/btn_continue_level_1"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/st_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/swfont"
                    android:text="Тестирование программного обеспечения (Software Testing)"
                    android:textAlignment="center"
                    android:textColor="@color/dark_blue_level_1"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/st_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ST"
                    android:textAlignment="center"
                    android:textColor="@color/dark_blue_level_1"
                    android:textSize="14dp" />
            </LinearLayout>
            <!-- Sofrware quality  Качество программного о-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/btn_continue_level_1"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/sq_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/swfont"
                    android:text="Качество программного обеспечения (Software quality)"
                    android:textAlignment="center"
                    android:textColor="@color/dark_blue_level_1"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/sq_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/SQ"
                    android:textAlignment="center"
                    android:textColor="@color/dark_blue_level_1"
                    android:textSize="14dp" />
            </LinearLayout>
            <!--Баг-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/btn_continue_level_1"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/bug_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/swfont"
                    android:text="Баг / Дефект"
                    android:textAlignment="center"
                    android:textColor="@color/dark_blue_level_1"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/bug_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bug"
                    android:textAlignment="center"
                    android:textColor="@color/dark_blue_level_1"
                    android:textSize="14dp" />
            </LinearLayout>
            <!--Верификация-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/btn_continue_level_1"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/veriviction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/swfont"
                    android:text="Верификация"
                    android:textAlignment="center"
                    android:textColor="@color/dark_blue_level_1"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/verification_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/verification_text"
                    android:textAlignment="center"
                    android:textColor="@color/dark_blue_level_1"
                    android:textSize="14dp" />
            </LinearLayout>
            <!--Валидация-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/btn_continue_level_1"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/validation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/swfont"
                    android:text="Валидация"
                    android:textAlignment="center"
                    android:textColor="@color/dark_blue_level_1"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/validation_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/validation_text"
                    android:textAlignment="center"
                    android:textColor="@color/dark_blue_level_1"
                    android:textSize="14dp" />
            </LinearLayout>
            <!--Other -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/btn_continue_level_1"
                android:orientation="vertical"
                android:padding="10dp"
                >


                <TextView
                    android:id="@+id/othe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/swfont"
                    android:text="Встречается и такое..."
                    android:textAlignment="center"
                    android:textColor="@color/dark_blue_level_1"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/other"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/verivication_validation_other"
                    android:textAlignment="center"
                    android:textColor="@color/dark_blue_level_1"
                    android:textSize="14dp" />
            </LinearLayout>
            <!--Цели Тестирования-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/btn_continue_level_1"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_marginBottom="15dp"
                >


                <TextView
                    android:id="@+id/testing_goals"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/swfont"
                    android:text="Цели тестирования"
                    android:textAlignment="center"
                    android:textColor="@color/dark_blue_level_1"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/testing_goals_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tg_text"
                    android:textAlignment="center"
                    android:textColor="@color/dark_blue_level_1"
                    android:textSize="14dp" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</RelativeLayout>


